Generics added to some openxava core classes